# Systeme-de-vision-TCP-a-reconnaissance-faciale

./: .gitignore  README.md
Client/: CMakeLists.txt  Doxyfile
Client/include/: Client.h
Client/src/: Client.cpp  main.cpp
server/: CMakeLists.txt
server/include/: Server.h
server/src/: Server.cpp  main.cpp
