cmake_minimum_required(VERSION 2.8)
project(Projet_Client)
add_executable(Projet_Client src/main.cpp src/Client.cpp)
include_directories(include)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
	include_directories(${OpenCV_INCLUDE_DIRS})
	target_link_libraries(Projet_Client ${OpenCV_LIBRARIES})
else(OpenCV_FOUND)
	message(FATAL ERROR "Librarie OpenCV introuvable!")
endif(OpenCV_FOUND)
